# Padfoot_bot

./: Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  run_bot.py
.github/workflows/: main.yml
botutils/: constants.py  embeds.py  searchforlinks.py  utils.py
brain/: receiver.py
brain/ao3_brain/: ao3_au_profile.py  ao3_searcher.py
brain/ffn_brain/: ffn_au_profile.py  ffn_searcher.py
brain/portkey_brain/: portkey_searcher.py
helpercogs/: admin_cog.py  ffn_au_profile_cog.py  fic_blacklist.py  gsearch_cog.py  help_cog.py  sticky_cog.py
